# FeOS

./: README.md
fe_os/: Cargo.toml
fe_os/.cargo/: config
fe_os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  pc_speaker.rs  vga_buffer.rs
