[package]
name = "fe_os"
version = "0.1.0"
authors = ["Danya Generalov <danya@danya02.ru>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
default-target = "x86_64-fe_os.json"
