[package]
name = "fe_os"
version = "0.1.0"
authors = ["Danya Generalov <danya@danya02.ru>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
bootloader = { version = "0.8.0", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.7.5"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
linked_list_allocator = "0.6.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
default-target = "x86_64-fe_os.json"
